[ENH] 메인 페이지 디자인 작업

--- a/bannerload/views/layouts/layout.html
+++ b/bannerload/views/layouts/layout.html
@@ -5,7 +5,7 @@
     <title>Design Layout</title>
 
     <!-- common style sheet -->
-    <link rel="stylesheet" href="../../public/css/styles.css">
+    <link rel="stylesheet" href="../../public/css/main.css">
 
     <!-- your style sheet
     <link rel="stylesheet" href="">
