--- a/bannerload/public/css/main.css
+++ b/bannerload/public/css/main.css
@@ -1,17 +1,531 @@
-/* Error: Can't find stylesheet to import.
- *   ,
- * 8 | @import 'layouts/_nav.scss';
- *   |         ^^^^^^^^^^^^^^^^^^^
- *   '
- *   public\scss\main.scss 8:9  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a   \2577 \a 8 \2502  @import 'layouts/_nav.scss';\a   \2502          ^^^^^^^^^^^^^^^^^^^\a   \2575 \a   public\\scss\\main.scss 8:9  root stylesheet";
+.footer-container .footer-legal a, .header-fixed .header .header-menu li a, .header .header-menu li a {
+  text-decoration: none;
 }
+
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0-modified | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* make sure to set some focus styles for accessibility */
+:focus {
+  outline: 0;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after {
+  content: "";
+  content: none;
+}
+
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+input[type=search] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+}
+input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-search-decoration, input[type=search]::-webkit-search-results-button, input[type=search]::-webkit-search-results-decoration {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+textarea {
+  overflow: auto;
+  vertical-align: top;
+  resize: vertical;
+}
+
+/**
+ * Correct `inline-block` display not defined in IE 6/7/8/9 and Firefox 3.
+ */
+audio, canvas, video {
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
+  max-width: 100%;
+}
+
+/**
+ * Prevent modern browsers from displaying `audio` without controls.
+ * Remove excess height in iOS 5 devices.
+ */
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+/**
+ * Address styling not present in IE 7/8/9, Firefox 3, and Safari 4.
+ * Known issue: no IE 6 support.
+ */
+[hidden] {
+  display: none;
+}
+
+/**
+ * 1. Correct text resizing oddly in IE 6/7 when body `font-size` is set using
+ *    `em` units.
+ * 2. Prevent iOS text size adjust after orientation change, without disabling
+ *    user zoom.
+ */
+html {
+  font-size: 100%;
+  /* 1 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
+  -ms-text-size-adjust: 100%;
+  /* 2 */
+}
+
+/**
+ * Address `outline` inconsistency between Chrome and other browsers.
+ */
+a:focus {
+  outline: thin dotted;
+}
+a:active, a:hover {
+  outline: 0;
+}
+
+/**
+ * Improve readability when focused and also mouse hovered in all browsers.
+ */
+/**
+ * 1. Remove border when inside `a` element in IE 6/7/8/9 and Firefox 3.
+ * 2. Improve image quality when scaled in IE 7.
+ */
+img {
+  border: 0;
+  /* 1 */
+  -ms-interpolation-mode: bicubic;
+  /* 2 */
+}
+
+/**
+ * Address margin not present in IE 6/7/8/9, Safari 5, and Opera 11.
+ */
+figure, form {
+  margin: 0;
+}
+
+/**
+ * Correct margin displayed oddly in IE 6/7.
+ */
+/**
+ * Define consistent border, margin, and padding.
+ */
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em;
+}
+
+/**
+ * 1. Correct color not being inherited in IE 6/7/8/9.
+ * 2. Correct text not wrapping in Firefox 3.
+ * 3. Correct alignment displayed oddly in IE 6/7.
+ */
+legend {
+  border: 0;
+  /* 1 */
+  padding: 0;
+  white-space: normal;
+  /* 2 */
+  *margin-left: -7px;
+  /* 3 */
+}
+
+/**
+ * 1. Correct font size not being inherited in all browsers.
+ * 2. Address margins set differently in IE 6/7, Firefox 3+, Safari 5,
+ *    and Chrome.
+ * 3. Improve appearance and consistency in all browsers.
+ */
+button, input, select, textarea {
+  font-size: 100%;
+  /* 1 */
+  margin: 0;
+  /* 2 */
+  vertical-align: baseline;
+  /* 3 */
+  *vertical-align: middle;
+  /* 3 */
+}
+
+/**
+ * Address Firefox 3+ setting `line-height` on `input` using `!important` in
+ * the UA stylesheet.
+ */
+button, input {
+  line-height: normal;
+}
+
+/**
+ * Address inconsistent `text-transform` inheritance for `button` and `select`.
+ * All other form control elements do not inherit `text-transform` values.
+ * Correct `button` style inheritance in Chrome, Safari 5+, and IE 6+.
+ * Correct `select` style inheritance in Firefox 4+ and Opera.
+ */
+button, select {
+  text-transform: none;
+}
+
+/**
+ * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
+ *    and `video` controls.
+ * 2. Correct inability to style clickable `input` types in iOS.
+ * 3. Improve usability and consistency of cursor style between image-type
+ *    `input` and others.
+ * 4. Remove inner spacing in IE 7 without affecting normal text inputs.
+ *    Known issue: inner spacing remains in IE 6.
+ */
+button, html input[type=button] {
+  -webkit-appearance: button;
+  /* 2 */
+  cursor: pointer;
+  /* 3 */
+  *overflow: visible;
+  /* 4 */
+}
+
+input[type=reset], input[type=submit] {
+  -webkit-appearance: button;
+  /* 2 */
+  cursor: pointer;
+  /* 3 */
+  *overflow: visible;
+  /* 4 */
+}
+
+/**
+ * Re-set default cursor for disabled elements.
+ */
+button[disabled], html input[disabled] {
+  cursor: default;
+}
+
+/**
+ * 1. Address box sizing set to content-box in IE 8/9.
+ * 2. Remove excess padding in IE 8/9.
+ * 3. Remove excess padding in IE 7.
+ *    Known issue: excess padding remains in IE 6.
+ */
+input[type=checkbox], input[type=radio] {
+  box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */
+  *height: 13px;
+  /* 3 */
+  *width: 13px;
+  /* 3 */
+}
+input[type=search] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  /* 2 */
+  box-sizing: content-box;
+}
+input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Address `appearance` set to `searchfield` in Safari 5 and Chrome.
+ * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
+ *    (include `-moz` to future-proof).
+ */
+/**
+ * Remove inner padding and search cancel button in Safari 5 and Chrome
+ * on OS X.
+ */
+/**
+ * Remove inner padding and border in Firefox 3+.
+ */
+button::-moz-focus-inner, input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+/**
+ * 1. Remove default vertical scrollbar in IE 6/7/8/9.
+ * 2. Improve readability and alignment in all browsers.
+ */
+textarea {
+  overflow: auto;
+  /* 1 */
+  vertical-align: top;
+  /* 2 */
+}
+
+/**
+ * Remove most spacing between table cells.
+ */
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+html, button, input, select, textarea {
+  color: #222;
+}
+
+::-moz-selection, ::selection {
+  background: #b3d4fc;
+  text-shadow: none;
+}
+
+img {
+  vertical-align: middle;
+}
+
+fieldset {
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
+textarea {
+  resize: vertical;
+}
+
+.chromeframe {
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
+}
+
+.btn-orange {
+  padding: 0 25px;
+  border: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  border-radius: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  display: inline-block;
+  font-family: "Overpass", sans-serif;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.btn-orange {
+  border: 1px solid #f29156;
+  background: #f1751b;
+  color: #ffffff;
+}
+
+body {
+  font-size: 16px;
+  font-family: "Overpass", sans-serif;
+  word-break: keep-all;
+}
+
+.main {
+  min-width: 1024px;
+}
+
+.hidden {
+  display: none;
+}
+
+.skin-container {
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+}
+
+.footer-container .footer-legal a, .header-fixed .header .header-menu li a, .header .header-menu li a {
+  text-decoration: none;
+}
+
+.header-fixed, .header .header-menu {
+  border-style: solid;
+  border-image: linear-gradient(to right, rgba(104, 92, 66, 0.5) 0%, #685c42 5px, #d9b970 55%, #685c42 100%) 1;
+  border-image-width: 2px 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  background-clip: padding-box;
+}
+
+.header-container {
+  width: 100%;
+  min-width: 1024px;
+  margin: 0 auto;
+  position: absolute;
+  top: 118px;
+  left: 0;
+  z-index: 1000;
+  text-align: center;
+}
+
+.header {
+  display: inline-block;
+  overflow: hidden;
+  position: relative;
+}
+
+.header .header-logo-wrap {
+  float: left;
+  position: relative;
+  top: 0;
+  left: 0;
+}
+.header .header-logo-wrap img {
+  width: 100%;
+}
+.header .header-logo-wrap .header-logo-default {
+  display: block;
+}
+.header .header-logo-wrap .header-logo-fixed {
+  display: none;
+}
+
+.header .header-menu {
+  margin-top: 46px;
+  margin-left: -17px;
+  padding: 0;
+  float: left;
+  border-width: 2px 0 2px 17px;
+  border-left-color: rgba(0, 0, 0, 0);
+}
+.header .header-menu li {
+  height: 37px;
+  padding-top: 12px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  float: left;
+}
+.header .header-menu li a {
+  padding: 0 10px;
+  font-size: 16px;
+  color: #f4e2a9;
+}
+.header .header-menu li a.active {
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.header-fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  border-width: 2px 0;
+}
+
+.header-fixed .header {
+  height: 100%;
+}
+
+.header-fixed .header .header-logo-wrap {
+  margin-top: 7px;
+  margin-right: 40px;
+  position: static;
+}
+.header-fixed .header .header-logo-wrap img {
+  width: auto;
+  height: 42px;
+}
+.header-fixed .header .header-logo-wrap .header-logo-default {
+  display: none;
+}
+.header-fixed .header .header-logo-wrap .header-logo-fixed {
+  display: block;
+}
+
+.header-fixed .header .header-menu {
+  margin: 8px 0 0 0;
+  border: none;
+  background: none;
+}
+.header-fixed .header .header-menu li {
+  height: 37px;
+  padding-top: 12px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  float: left;
+}
+.header-fixed .header .header-menu li a {
+  padding: 0 10px;
+  font-size: 16px;
+  color: #f4e2a9;
+}
+.header-fixed .header .header-menu li a.active {
+  font-weight: bold;
+  color: #ffffff;
+}
+
+.footer-container .footer-legal a, .header .header-menu li a, .header-fixed .header .header-menu li a {
+  text-decoration: none;
+}
+
+.footer {
+  background: #0c0c0d;
+}
+
+.footer-container {
+  width: 1024px;
+  margin: 0 auto;
+  padding: 45px 0;
+  text-align: center;
+}
+.footer-container .footer-legal {
+  margin-top: 30px;
+}
+.footer-container .footer-legal a {
+  font-weight: 300;
+  color: #a6a6a7;
+}
+.footer-container .copyright {
+  margin-top: 20px;
+  font-weight: 300;
+  font-size: 14px;
+  color: #a6a6a7;
+}
+
+/*# sourceMappingURL=main.css.map */
