--- a/bannerload/public/css/pages/index.css
+++ b/bannerload/public/css/pages/index.css
@@ -146,7 +146,7 @@
   width: 100%;
   height: 500px;
   padding-top: 140px;
-  background-image: url("/assets/images/banner_bg_1.jpg");
+  background-image: url("../../images/banner_bg_1.jpg");
   background-repeat: no-repeat;
   background-position: 50% 0;
   -webkit-box-sizing: border-box;
