--- a/bannerload/public/scss/layouts/_header.scss
+++ b/bannerload/public/scss/layouts/_header.scss
@@ -13,7 +13,7 @@
     background-clip: padding-box;
 }
 
-.nav-container{
+.header-container{
     @include size(width 100% min $screen-size);
     @include margin(0 auto);
     position: absolute;
@@ -23,13 +23,13 @@
     text-align: center;
 }
 
-.nav{
+.header{
     display: inline-block;
     overflow: hidden;
     position: relative;
 }
 
-.nav .nav-header{
+.header .header-logo-wrap{
     float: left;
     position: relative;
     top: 0;
@@ -39,16 +39,16 @@
         @include size(100%)
     }
 
-    .nav-header-logo-default{
+    .header-logo-default{
         display: block;
     }
 
-    .nav-header-logo-fixed{
+    .header-logo-fixed{
         display: none;
     }
 }
 
-.nav .nav-menu{
+.header .header-menu{
     @extend %bg-skin-default;
     @include margin(top 46px left -17px);
     @include padding(0);
@@ -76,7 +76,7 @@
     }
 }
 
-.nav-fixed{
+.header-fixed{
     @extend %bg-skin-default;
     position: fixed;
     top: 0;
@@ -84,11 +84,11 @@
     border-width: 2px 0;
 }
 
-.nav-fixed .nav{
+.header-fixed .header{
     @include size(null, 100%);
 }
 
-.nav-fixed .nav .nav-header{
+.header-fixed .header .header-logo-wrap{
     @include margin(top 7px right 40px);
     position: static;
 
@@ -96,16 +96,16 @@
         @include size(auto, 42px);
     }
 
-    .nav-header-logo-default{
+    .header-logo-default{
         display: none;
     }
 
-    .nav-header-logo-fixed{
+    .header-logo-fixed{
         display: block;
     }
 }
 
-.nav-fixed .nav .nav-menu{
+.header-fixed .header .header-menu{
     @include margin(8px 0 0 0);
     border: none;
     background: none;
