--- a/bannerload/public/scss/main.scss
+++ b/bannerload/public/scss/main.scss
@@ -5,5 +5,5 @@
 @import 'base/_reset.scss';
 @import 'base/_base.scss';
 
-@import 'layouts/_nav.scss';
+@import 'layouts/_header.scss';
 @import 'layouts/_footer.scss';
