--- a/bannerload/views/pages/index.html
+++ b/bannerload/views/pages/index.html
@@ -5,11 +5,10 @@
     <title>Design Layout</title>
 
     <!-- common style sheet -->
-    <link rel="stylesheet" href="../../public/css/styles.css">
+    <link rel="stylesheet" href="../../public/css/main.css">
 
-    <!-- your style sheet
-    <link rel="stylesheet" href="">
-    -->
+    <!-- your style sheet -->
+    <link rel="stylesheet" href="../../public/css/pages/index.css">
 
     <!-- font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;400;600;700;800&display=swap">
@@ -20,10 +19,138 @@
 <body>
 <div id="app">
     <!-- include header.html -->
+    <div class="header-container">
+        <header class="header">
+            <div class="header-logo-wrap">
+                <h1 class="header-logo">
+                    <a href="/">
+                        <img src="../../public/images/header_logo.png" class="header-logo-default" alt="header logo">
+                        <img src="../../public/images/header_logo_fixed.png" class="header-logo-fixed" alt="header logo fixed">
+                    </a>
+                </h1>
+            </div>
+            <ul class="header-menu">
+                <li>
+                    <a href="/home" class="active">
+                        home
+                    </a>
+                </li>
+                <li>
+                    <a href="/news">
+                        news
+                    </a>
+                </li>
+                <li>
+                    <a href="/about">
+                        about
+                    </a>
+                </li>
+            </ul>
+        </header>
+    </div>
 
     <!-- include page.html -->
+    <main class="main">
+        <div class="top-container">
+            <section class="video-container">
+                <video autoplay="autoplay" loop="" muted="" plays-inline="true" defaultmuted="" id="video-main">
+                    <source src="your video source">
+                </video>
+            </section>
+
+            <section class="intro-container">
+                <h2 class="intro-title">Main Title</h2>
+                <p class="intro-text">
+                    Main Text
+                </p>
+                <a href="#" class="btn-orange">
+                    button
+                </a>
+            </section>
+        </div>
+
+        <article class="news-container">
+            <div class="title-wrap">
+                <h2 class="news-title">News List</h2>
+                <a href="/news" class="btn-link">More</a>
+            </div>
+
+            <ul class="news-list">
+                <li>
+                    <a href="#">
+                        <div class="list-image-wrap">
+                            <img src="../../public/images/news_thumbnaul_1.png" alt="">
+                        </div>
+
+                        <div class="list-info-wrap">
+                            <h3 class="list-title">Title</h3>
+                            <span class="list-date">Date</span>
+                            <p class="list-text">
+                                Text
+                            </p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="list-image-wrap">
+                            <img src="../../public/images/news_thumbnaul_1.png" alt="">
+                        </div>
+
+                        <div class="list-info-wrap">
+                            <h3 class="list-title">Title</h3>
+                            <span class="list-date">Date</span>
+                            <p class="list-text">
+                                Text
+                            </p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="list-image-wrap">
+                            <img src="../../public/images/news_thumbnaul_1.png" alt="">
+                        </div>
+
+                        <div class="list-info-wrap">
+                            <h3 class="list-title">Title</h3>
+                            <span class="list-date">Date</span>
+                            <p class="list-text">
+                                Text
+                            </p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </article>
+
+        <section class="image-container">
+            <div class="container">
+                <h2>Title</h2>
+                <p>
+                    Text
+                </p>
+                <a href="#" class="btn-orange">button</a>
+            </div>
+        </section>
+    </main>
 
     <!-- include footer.html -->
+    <footer class="footer">
+        <div class="footer-container">
+            <h1 class="footer-logo">
+                <a href="/"><img src="../../public/images/footer_logo.png" alt="footer logo"></a>
+            </h1>
+
+            <div class="footer-legal">
+                <a href="#">Privacy Policy</a>
+            </div>
+
+            <p class="copyright">
+                © 2005-2019 TaleWorlds Entertainment. All rights reserved.
+            </p>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
