--- a/bannerload/views/layouts/footer.html
+++ b/bannerload/views/layouts/footer.html
@@ -5,11 +5,11 @@
         </h1>
 
         <div class="footer-legal">
-            <a href="#">Privacy Policy</a>
+            <a href="#">legal</a>
         </div>
 
         <p class="copyright">
-            © 2005-2019 TaleWorlds Entertainment. All rights reserved.
+            © copyright
         </p>
     </div>
 </footer>
