--- a/bannerload/views/pages/index.html
+++ b/bannerload/views/pages/index.html
@@ -15,6 +15,7 @@
 
     <!-- common script -->
     <script type="text/javascript" src="../../public/js/common.js"></script>
+    <script type="text/javascript" src="../../public/js/index.js"></script>
 </head>
 <body>
 <div id="app">
@@ -124,13 +125,26 @@
             </ul>
         </article>
 
-        <section class="image-container">
+        <section class="main-container">
             <div class="container">
-                <h2>Title</h2>
+                <h2>Text</h2>
                 <p>
-                    Text
+                    TextTextTextTextTextTextTextTextTextTextTextTextTextTextTextTextTextTextTextText
+                    TextTextTextTextTextTextTextTextTextTextTextTextTextTextTextTextTextTextTextText
                 </p>
-                <a href="#" class="btn-orange">button</a>
+                <a href="#" class="btn-show-text btn-orange">button</a>
+            </div>
+        </section>
+
+        <section class="text-container">
+            <div class="container">
+                <p>
+                    <strong>Strong</strong><br>
+                    text<br>
+                    text<br><br>
+                    text
+                </p>
+                <a href="#" class="btn-show-text btn-orange">button</a>
             </div>
         </section>
     </main>
@@ -143,11 +157,11 @@
             </h1>
 
             <div class="footer-legal">
-                <a href="#">Privacy Policy</a>
+                <a href="#">legal</a>
             </div>
 
             <p class="copyright">
-                © 2005-2019 TaleWorlds Entertainment. All rights reserved.
+                © copyright
             </p>
         </div>
     </footer>
