--- a/bannerload/public/css/pages/index.css
+++ b/bannerload/public/css/pages/index.css
@@ -54,6 +54,11 @@
   color: #e7e3c6;
 }
 
+.text-container .container, .main-container .container {
+  width: 940px;
+  margin: 0 auto;
+}
+
 .main {
   overflow: hidden;
 }
@@ -142,10 +147,10 @@
   line-height: 100%;
   color: #f1751b;
 }
-.image-container {
+.main-container {
   width: 100%;
-  height: 500px;
-  padding-top: 140px;
+  min-height: 500px;
+  padding: 130px 0;
   background-image: url("../../images/banner_bg_1.jpg");
   background-repeat: no-repeat;
   background-position: 50% 0;
@@ -155,25 +160,44 @@
   background-size: cover;
   text-align: center;
 }
-.image-container h2 {
+.main-container h2 {
   font-weight: 600;
   font-size: 35px;
   line-height: 1.3;
   color: #ffffff;
 }
-.image-container p {
+.main-container p {
   font-weight: 300;
   font-size: 25px;
-  line-height: 1.6;
   color: #e7e3c6;
 }
-.image-container .btn-orange {
+.main-container .btn-orange {
   min-width: 200px;
   height: 50px;
   margin-top: 30px;
   font-weight: bold;
   font-size: 18px;
   line-height: 54px;
+}
+
+.text-container {
+  width: 100%;
+  padding: 50px 0;
+  display: none;
+  background: #131212;
+  text-align: center;
+}
+.text-container.show {
+  display: block;
+}
+.text-container p {
+  color: #ffffff;
+  text-align: left;
+}
+.text-container .btn-show-text {
+  height: 50px;
+  margin: 30px auto 0;
+  line-height: 52px;
 }
 
 /*# sourceMappingURL=index.css.map */
