[ENH] 이미지 수정

--- a/bannerload/views/pages/index.html
+++ b/bannerload/views/pages/index.html
@@ -55,7 +55,7 @@
         <div class="top-container">
             <section class="video-container">
                 <video autoplay="autoplay" loop="" muted="" plays-inline="true" defaultmuted="" id="video-main">
-                    <source src="your video source">
+                    <source src="https://taleworldswebsiteassets.blob.core.windows.net/static/videos/bannerlord_video_web.mp4">
                 </video>
             </section>
 
