--- a/bannerload/public/scss/components/_button.scss
+++ b/bannerload/public/scss/components/_button.scss
@@ -12,7 +12,7 @@
 }
 
 %btn-orange{
-    @include border(1px solid #f29156);
+    @include border(1px solid $orange-333);
     background: $orange;
     color: $white;
 }
