--- a/bannerload/public/css/main.css
+++ b/bannerload/public/css/main.css
@@ -431,7 +431,7 @@ body {
   padding: 0;
   float: left;
   border-width: 2px 0 2px 17px;
-  border-left-color: rgba(0, 0, 0, 0);
+  border-left-color: transparent;
 }
 .header .header-menu li {
   height: 37px;
