--- a/bannerload/public/scss/helpers/_variables.scss
+++ b/bannerload/public/scss/helpers/_variables.scss
@@ -1,12 +1,28 @@
 // color
-$page-color: rgba(0, 0, 0, 0.8);
 $black: #000;
-$light-black: #333333;
-$border-color-base: #d8d8d8;
-$white: #ffffff;
+$black-111: #131212;
+
+$dark-blue: #13212e;
+
+$brown: #6a5a45;
+$brown-999: #716e5a;
+
+$beige: #f4e2a9;
+$beige-999: #e7e3c6;
+
+$red: #bf1f1f;
+$red-999: #e85a5a;
 
 $orange: #f1751b;
-$beige: #f4e2a9;
+$orange-333: #f29156;
+
+$gray: #a6a6a7;
+$gray-888: #f5f5f5;
+$gray-999: #d0d3d5;
+
+$white: #ffffff;
+
+$border-color-base: #d8d8d8;
 
 // font - size
 $font-size-base: 16px;
