--- a/bannerload/public/scss/layouts/_header.scss
+++ b/bannerload/public/scss/layouts/_header.scss
@@ -54,7 +54,7 @@
     @include padding(0);
     float: left;
     border-width: 2px 0 2px 17px;
-    border-left-color: rgba(0, 0, 0, 0.0);
+    border-left-color: transparent;
 
     li{
         @include size(null, 37px);
