--- a/bannerload/public/scss/pages/about.scss
+++ b/bannerload/public/scss/pages/about.scss
@@ -26,7 +26,7 @@
         @include margin(top 25px);
         font-weight: bold;
         font-size: 41px;
-        color: rgba(254,174,0,1);
+        color: rgba(254, 174, 0, 1);
     }
 
     .container{
@@ -34,7 +34,7 @@
         @include margin(30px auto 0);
         @include padding(30px 0);
         @include box-sizing(border-box);
-        background: rgba(10, 10, 10, 0.60);
+        background: rgba(10, 10, 10, 0.6);
         color: rgba(200, 200, 200, 1);
     }
 
