--- a/bannerload/public/scss/pages/news.scss
+++ b/bannerload/public/scss/pages/news.scss
@@ -21,7 +21,7 @@
     @include box-shadow(0px -5px 15px 3px rgba(0, 0, 0, 0.75));
     @include box-sizing(border-box);
     display: inline-block;
-    background: #131212;
+    background: $black-111;
 
     .news-list{
         @include news-list();
