--- a/notice/public/scss/base/_base.scss
+++ b/notice/public/scss/base/_base.scss
@@ -1,5 +1,3 @@
-@import '../components/_button';
-
 body{
     font-size: $font-size-base;
     font-family: $font-family-base;
@@ -8,19 +6,10 @@ body{
 }
 
 .main{
-    min-width: $screen-size;
+    max-width: 1680px;
+    min-width: 320px;
 }
 
 .hidden{
     display: none;
-}
-
-.btn-orange{
-    @include btn(orange-fill);
-}
-
-.skin-container{
-    @include size(100%);
-    @include background(null, no-repeat, 50% 0);
-    background-size: cover;
 }
