--- a/notice/public/scss/pages/index.scss
+++ b/notice/public/scss/pages/index.scss
@@ -3,6 +3,7 @@
 @import '../helpers/_mixins';
 
 @import '../components/_news-list';
+@import '../components/_pagination';
 
 .main{
     @include padding(40px 60px);
@@ -40,4 +41,8 @@
         @include news-list();
         @include padding(0 30px);
     }
+}
+
+.paginate-container{
+    @include pagination()
 }
